--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,25 @@ Homepage = "https://github.com/endaaman/pydantic-autocli"
 
 [tool.hatch.build.targets.wheel]
 packages = ["pydantic_autocli"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+
+[dependency-groups]
+dev = [
+    "pytest>=7.4.4",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+]
+
+[tool.hatch.envs.test]
+dependencies = [
+    "pytest>=7.0.0",
+]
+
+[tool.hatch.envs.test.scripts]
+run = "pytest {args:tests}"
