--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,25 +21,24 @@ Homepage = "https://github.com/endaaman/pydantic-autocli"
 
 [tool.hatch.build.targets.wheel]
 packages = ["pydantic_autocli"]
+include = ["examples/*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
 
-[dependency-groups]
-dev = [
-    "pytest>=7.4.4",
-]
-
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
+    "pytest>=7.4.4",
+    "taskipy>=1.12.0",
 ]
 
-[tool.hatch.envs.test]
-dependencies = [
-    "pytest>=7.0.0",
-]
+[tool.taskipy.tasks]
+test = "pytest"
+example = "python examples/simple.py"
+clean = "rm -rf build/ dist/ *.egg-info/ __pycache__/ && find . -name '*.pyc' -delete && find . -name '__pycache__' -delete"
 
-[tool.hatch.envs.test.scripts]
-run = "pytest {args:tests}"
+[dependency-groups]
+dev = [
+    "taskipy>=1.14.1",
+]
