--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ python_files = "test_*.py"
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.4",
-    "taskipy>=1.12.0",
+    "taskipy>=1.14.1",
 ]
 
 [tool.taskipy.tasks]
@@ -40,5 +40,6 @@ clean = "rm -rf build/ dist/ *.egg-info/ __pycache__/ && find . -name '*.pyc' -d
 
 [dependency-groups]
 dev = [
+    "pytest>=7.4.4",
     "taskipy>=1.14.1",
 ]
