--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pydantic-autocli"
 version = "0.1.5"
 description = "Automatically generate CLI from Pydantic models"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 license = {file = "LICENSE"}
 authors = [
     {name = "Ken Enda", email = "ken@endaaman.com"},
@@ -30,16 +30,18 @@ python_files = "test_*.py"
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.4",
+    "pytest-cov>=6.0.0",
     "taskipy>=1.14.1",
 ]
 
 [tool.taskipy.tasks]
-test = "pytest"
+coverage = "pytest --cov=pydantic_autocli --cov-report=term-missing --disable-warnings"
 example = "python examples/example.py"
 clean = "rm -rf build/ dist/ *.egg-info/ __pycache__/ && find . -name '*.pyc' -delete && find . -name '__pycache__' -delete"
 
 [dependency-groups]
 dev = [
     "pytest>=7.4.4",
+    "pytest-cov>=6.0.0",
     "taskipy>=1.14.1",
 ]
