--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,10 +69,10 @@ jobs:
       run: uv python install 3.12
 
     - name: Install build dependencies
-      run: uv tool install build
+      run: uv add --dev build
 
     - name: Build package
-      run: uv tool run build
+      run: uv run python -m build
 
     - name: Check package integrity
       run: |
