--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,17 @@ python_files = "test_*.py"
 coverage = "pytest --cov=pydantic_autocli --cov-report=term-missing --disable-warnings"
 example = "python examples/example.py"
 clean = "rm -rf build/ dist/ *.egg-info/ __pycache__/ && find . -name '*.pyc' -delete && find . -name '__pycache__' -delete"
+lint = "ruff check ."
+fix = "ruff check --fix ."
+
+[tool.ruff.lint]
+ignore = ["E741"]
 
 [dependency-groups]
 dev = [
     "ipython>=8.18.1",
     "pytest>=7.4.4",
     "pytest-cov>=6.0.0",
+    "ruff>=0.14.7",
     "taskipy>=1.14.1",
 ]
